--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "Kingdom-Hearts";
+  src: local(Kingdom_Hearts_Font);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background:#000000;
+}
+#menu{
+  background-color: #000000;
+}
+#navbarSupportedContent{
+  background: linear-gradient(#000000, #d9d9d9);
+  text-align: center;
+  color: white;
+}
+#player{
+  background-color: #d9d9d9;
+  text-align: center;
+  padding: 12px;
+  padding-bottom: 4px;
+  width: auto;
+  height: auto;
+}
+#fonctionnaliter{
+  background-color: #9D9797;
+  border-color: #D9D9D9;
+  border-style: solid;
+  border-left-width: 12px;
+  border-right-width: 12px;
+  padding-bottom: 200px;
+  text-align: center;
+}
+#explication{
+  background-color: #9D9797;
+  border-color: #9D9797;
+  border-style: solid;
+  border-left-width: 12px;
+  border-right-width: 12px;
+  text-align: center;
+}
+#classes{
+  background-color: #d9d9d9;
+  border-color: #9D9797;
+  border-style: solid;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  padding-top: 25px;
+}
+#craft{
+  background-color: #d9d9d9;
+  border-color: #9D9797;
+  border-style: solid;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  padding-top: 25px;
+  position: absolute;
+  top: 557.5px;
+  bottom: 0px;
+  right: 0;
+  left: 428px;
+}
+#donjon{
+  background-color: #d9d9d9;
+  border-color: #9D9797;
+  border-style: solid;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  padding-top: 25px;
+  position: absolute;
+  top: 557.5px;
+  bottom: 0px;
+  right: 0;
+  left: 814px;
+}
+#guilde{
+  background-color: #d9d9d9;
+  border-color: #9D9797;
+  border-style: solid;
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  padding-top: 25px;
+  position: absolute;
+  top: 557.5px;
+  bottom: 0px;
+  right: 0;
+  left: 1196px;
+}
+@media screen and (max-width: 991.5px) {
+  #navbarSupportedContent{
+  background: #d9d9d9;
+  text-align: center;
+  color: white;
+}
 }
