--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,10 @@ body{
     padding: 10px;
     border-radius: 0px;
 }
+#installation {
+    background-color: #D9D9D9;
+    text-align: center;
+    border: 5px solid #9D9797;
+    padding: 10px;
+    border-radius: 0px;
+}
